--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>Reversi Game</title>
     <link rel="stylesheet" type="text/css" href="style.css" \>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-
 </head>
-
 <body>
 <h2>Reversi</h2>
+<button id="newGameButton">New Game</button>
 <script src="logic.js "></script>
 </body>
 
