Md ubdated and Statistics board created

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <link rel="stylesheet" type="text/css" href="style.css" \>
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
+
 <body>
-<h2>Reversi</h2>
-<button id="newGameButton">New Game</button>
-<script src="logic.js "></script>
+    <h2>Reversi</h2>
+    <button id="newGameButton">End Game</button>
+    <h3 id="winner" style="display: none;"></h3>
+    </h2>
+    <script src="logic.js "></script>
 </body>
 
 </html>
